[package]
name = "sui-ctf-framework"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/otter-sec/sui-ctf-framework"
description = "A framework for building sui based capture the flag challenges"
repository = "https://github.com/otter-sec/sui-ctf-framework"

[dependencies]
tempfile = "3.2.0"
once_cell = "1.17.1"
clap = { version = "3.1.8", features = ["derive"] }
diesel-async = { version = "0.3.0", features = ["deadpool", "postgres"] }

sui-protocol-config = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "sui-protocol-config"}
sui-types = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "sui-types"}
sui-transactional-test-runner = { git = "https://github.com/MystenLabs/sui", package = "sui-transactional-test-runner", rev="8c2cf85b"}

move-symbol-pool = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-symbol-pool" }
move-stdlib = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-stdlib" }
move-compiler = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-compiler" }
move-binary-format = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-binary-format" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-command-line-common" }
move-transactional-test-runner = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-transactional-test-runner" }
move-core-types = { git = "https://github.com/MystenLabs/sui", rev="8c2cf85b", package = "move-core-types" }